# plex-rs

./: Cargo.toml
src/: lib.rs
src/web_api/: error.rs  mod.rs
src/web_api/models/: library_section.rs  library_sections.rs  mod.rs  search_results.rs  server_information.rs
